// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":r0:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":r0:"
      max="100"
      min="0"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="50"
    />
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> Disabled story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="slider"
  >
    <label
      class="label slider__label--disabled"
      for=":r8:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      disabled=""
      id=":r8:"
      max="5"
      min="1"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="3"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body-md slider__marker slider__marker--disabled"
      >
        1
      </p>
      <p
        class="text text--body-md slider__marker slider__marker--disabled"
      >
        2
      </p>
      <p
        class="text text--body-md slider__marker slider__marker--disabled"
      >
        3
      </p>
      <p
        class="text text--body-md slider__marker slider__marker--disabled"
      >
        4
      </p>
      <p
        class="text text--body-md slider__marker slider__marker--disabled"
      >
        5
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> FieldNote story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":re:"
    >
      Slider Label
       
    </label>
    <input
      aria-describedby=":rf:"
      class="slider__input"
      id=":re:"
      max="100"
      min="0"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="50"
    />
    <div
      class="field-note"
      id=":rf:"
    >
      This is a fieldnote. It overrides the markers
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> GeneratedMarkers story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":r4:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":r4:"
      max="5"
      min="1"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="3"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body-md slider__marker"
      >
        1
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        2
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        3
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        4
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        5
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> MarkersLargeValues story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="w-80"
  >
    <div
      class="slider"
    >
      <label
        class="label"
        for=":rc:"
      >
        Slider Label
         
      </label>
      <input
        class="slider__input"
        id=":rc:"
        max="10000"
        min="0"
        step="2500"
        style="--ratio: 0.5;"
        type="range"
        value="5000"
      />
      <div
        aria-hidden="true"
        class="slider__markers"
      >
        <p
          class="text text--body-md slider__marker"
        >
          0
        </p>
        <p
          class="text text--body-md slider__marker"
        >
          2500
        </p>
        <p
          class="text text--body-md slider__marker"
        >
          5000
        </p>
        <p
          class="text text--body-md slider__marker"
        >
          7500
        </p>
        <p
          class="text text--body-md slider__marker"
        >
          10000
        </p>
      </div>
      <div
        class="slider__thumb-proxy"
      />
    </div>
  </div>
</div>
`;

exports[`<Slider /> MarkersSmallValues story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":ra:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":ra:"
      max="5"
      min="1"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="3"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body-md slider__marker"
      >
        1
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        2
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        3
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        4
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        5
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> NegativeNonIntegerMarkers story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":r6:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":r6:"
      max="1"
      min="-1"
      step="0.5"
      style="--ratio: 0.5;"
      type="range"
      value="0"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body-md slider__marker"
      >
        -1
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        -0.5
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        0
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        0.5
      </p>
      <p
        class="text text--body-md slider__marker"
      >
        1
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> NoVisibleLabel story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="slider"
  >
    <input
      aria-label="Not visible slider label"
      class="slider__input"
      id=":r2:"
      max="100"
      min="0"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="50"
    />
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> UsingControlButtons story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="flex w-full items-center justify-center gap-2"
  >
    <button
      aria-label="Decrement"
      class="button button--lg button--secondary button--neutral"
      type="button"
    >
      –
    </button>
    <p
      class="text text--body-md"
    >
      0
    </p>
    <div
      class="slider w-1/2"
    >
      <input
        aria-label="select a value"
        class="slider__input"
        id=":rk:"
        max="100"
        min="0"
        step="1"
        style="--ratio: 0.5;"
        type="range"
        value="50"
      />
      <div
        class="slider__thumb-proxy"
      />
    </div>
    <p
      class="text text--body-md"
    >
      100
    </p>
    <button
      aria-label="Increment"
      class="button button--lg button--secondary button--neutral"
      type="button"
    >
      +
    </button>
  </div>
</div>
`;

exports[`<Slider /> UsingInputDisplay story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="flex w-full items-center justify-center gap-2"
  >
    <p
      class="text text--body-md"
    >
      0
    </p>
    <div
      class="slider w-1/2"
    >
      <input
        aria-label="Slider with input"
        class="slider__input"
        id=":rg:"
        max="100"
        min="0"
        step="1"
        style="--ratio: 0.5;"
        type="range"
        value="50"
      />
      <div
        class="slider__thumb-proxy"
      />
    </div>
    <p
      class="text text--body-md"
    >
      100
    </p>
    <div
      class="mx-2  w-14"
    >
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="display value"
          class="input"
          id=":ri:"
          readonly=""
          type="text"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Slider /> WithHighlightedContent story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article>
    <div
      class="items-top flex justify-center gap-10"
    >
      <div
        class="slider w-1/2"
      >
        <input
          aria-describedby="mood-description"
          aria-label="Mood Slider"
          class="slider__input"
          id=":rm:"
          max="100"
          min="0"
          step="25"
          style="--ratio: 0.5;"
          type="range"
          value="50"
        />
        <div
          aria-hidden="true"
          class="slider__markers"
        >
          <p
            class="text text--body-md slider__marker"
          >
            Very Upset
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Upset
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Neutral
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Happy
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Very Happy
          </p>
        </div>
        <div
          class="slider__thumb-proxy"
        />
      </div>
      <span
        class="text text--body-xl"
      >
        <span>
          😐
        </span>
      </span>
    </div>
    <p
      class="text text--body-md py-3 text-center"
      id="mood-description"
    >
      Current mood:
       
      <strong>
        <span>
          Neutral
        </span>
      </strong>
    </p>
  </article>
</div>
`;

exports[`<Slider /> WithMultipleVisualLabels story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article>
    <div
      class="items-top flex flex-col justify-center "
    >
      <label
        class="label w-1/2 py-4 text-center"
        id="slider-label"
      >
        Mood Slider
         
      </label>
      <span
        class="text text--body-xl flex w-1/2 justify-between py-4 text-center"
      >
        <div
          class=""
        >
          😡
        </div>
        <div
          class=""
        >
          🙁
        </div>
        <div
          class="scale-150 transition-transform"
        >
          😐
        </div>
        <div
          class=""
        >
          🙂
        </div>
        <div
          class=""
        >
          😍
        </div>
      </span>
      <div
        class="slider w-1/2"
      >
        <input
          aria-label="Mood Slider"
          aria-labelledby="slider-label"
          class="slider__input"
          id=":rq:"
          max="100"
          min="0"
          step="25"
          style="--ratio: 0.5;"
          type="range"
          value="50"
        />
        <div
          aria-hidden="true"
          class="slider__markers"
        >
          <p
            class="text text--body-md slider__marker"
          >
            Very Upset
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Upset
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Neutral
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Happy
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Very Happy
          </p>
        </div>
        <div
          class="slider__thumb-proxy"
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`<Slider /> WithVisualLabel story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article>
    <div
      class="items-top flex flex-col justify-center "
    >
      <label
        class="label w-1/2 py-4 text-center"
        id="slider-label"
      >
        Mood Slider
         
      </label>
      <span
        class="text text--body-xl w-1/2 py-4 text-center"
      >
        <span>
          😐
        </span>
      </span>
      <div
        class="slider w-1/2"
      >
        <input
          aria-label="Mood Slider"
          aria-labelledby="slider-label"
          class="slider__input"
          id=":ro:"
          max="100"
          min="0"
          step="25"
          style="--ratio: 0.5;"
          type="range"
          value="50"
        />
        <div
          aria-hidden="true"
          class="slider__markers"
        >
          <p
            class="text text--body-md slider__marker"
          >
            Very Upset
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Upset
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Neutral
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Happy
          </p>
          <p
            class="text text--body-md slider__marker"
          >
            Very Happy
          </p>
        </div>
        <div
          class="slider__thumb-proxy"
        />
      </div>
    </div>
  </article>
</div>
`;
